// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrderSummary Component OrderSummary should be render correctly 1`] = `
<div>
  <div
    class="css-6gxhc5"
  >
    <div
      class="css-1676o8c"
    >
      <div
        class="css-sf19nn"
      >
        Estás ahorrando
        <p
          class="chakra-text css-105v11o"
        >
          $50.00
        </p>
        en esta orden
      </div>
    </div>
    <div
      class="css-17m8p39"
    >
      <p
        class="chakra-text css-0"
      >
         Sub-Total:
      </p>
      $1,000.00
    </div>
  </div>
</div>
`;

exports[`OrderSummary Component Total price should be 0 if the totalNetPrice is 0 1`] = `
<div>
  <div
    class="css-6gxhc5"
  >
    <div
      class="css-1676o8c"
    >
      <div
        class="css-sf19nn"
      >
        Estás ahorrando
        <p
          class="chakra-text css-105v11o"
        >
          $50.00
        </p>
        en esta orden
      </div>
    </div>
    <div
      class="css-17m8p39"
    >
      <p
        class="chakra-text css-0"
      >
         Sub-Total:
      </p>
      $0.00
    </div>
  </div>
</div>
`;
